--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,13 @@ pip-delete-this-directory.txt
 *.so
 *.dylib
 
+# Don't Ignore Bench Artifacts
+!benchmarks/
+!benchmarks/runs/
+!benchmarks/runs/**/*
+!benchmarks/latest/
+!benchmarks/latest/**/*
+
 # Test binary, built with `go test -c`
 *.test
 
