bench: stabilize AOT transpile and record benchmark results
- Fixed AOT runtime integration (runtime.h usage, transpiler output)
- Added working fib_cli / fib_rec_cli generation
- Verified benchmarks across Go, Python, VM, AOT
- Results (ns/op, BENCH_REPS=5M):
  * fib_iter(40) → Go=147ns, VM=1072ns, AOT=58ns
  * fib_iter(60) → Go=257ns, VM=1587ns, AOT=66ns
  * fib_iter(90) → Go=424ns, VM=2363ns, AOT=83ns
  * fib_rec(34)  → Go=54ms, Python=1.3s, AOT=5.6ms

AOT shows faster iterative performance than Go/VM,
recursive matches expected exponential curve.
Benchmark CSVs saved in benchmarks/runs/20250912-195752/ and benchmarks/latest/.

--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,45 @@
-# build artefacts
+# ---- OS / editors -----------------------------------------------------------
+.DS_Store
+.idea/
+.vscode/
+
+# ---- Go build artifacts -----------------------------------------------------
+*.test
+*.out
+coverage.*
+# go workspaces (если появится)
+go.work
+go.work.sum
+
+# ---- Project build/bin ------------------------------------------------------
 .bin/
-bin/
-dist/
+
+# ---- AOT-generated C and objects -------------------------------------------
+# общий случай
 *.o
 *.a
-*.out
+*.so
+# сгенерированные C-файлы (держим исходники, игнорим эмит)
+# если вы генерите не только в .bin, можно игнорить по шаблонам:
+.bin/*.c
+**/fib_*_cli.c
 
-# macOS junk
-.DS_Store
-*/.DS_Store
-__MACOSX/
-
-# benchmarks: храним только last CSV, графики регенерируем
+# ---- Benchmarks outputs -----------------------------------------------------
 benchmarks/runs/
 benchmarks/latest/plots/
+benchmarks/latest/results/*.csv
 
-# Go
-vendor/
+# Разрешить держать сами папки latest/* пустыми через .gitkeep
+!benchmarks/latest/
+!benchmarks/latest/results/
+!benchmarks/latest/plots/
+benchmarks/latest/results/.gitkeep
+benchmarks/latest/plots/.gitkeep
+
+# ---- Legacy/old layout (на случай остатков) --------------------------------
+02_*/
+03_compiler_go/
+04_benchmarks/
+05_vm_mini/
+06_aot_minic/
+tools/benchfast/
