This commit updates all major project documents (README.md, README.performance.md, and docs/philosophy/README.md) to reflect the successful and complete benchmark runs.
Key changes:
- All documentation has been updated to English.
- Performance tables and summaries now include the final, correct results comparing Tengri-AOT against Go, C, and Rust.
- The project's success in achieving performance parity with native languages is now highlighted.

Additionally, the .gitignore file has been modified to stop ignoring the latest benchmark CSV files, allowing them to be tracked in the repository for public visibility and reproducibility.

--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ go.work.sum
 # ---- Benchmarks outputs -----------------------------------------------------
 benchmarks/runs/
 benchmarks/latest/plots/
-benchmarks/latest/results/*.csv
+# Allow latest results to be committed for visibility
+!benchmarks/latest/results/fib_iter.csv
+!benchmarks/latest/results/fib_rec.csv
 
 # Разрешить держать сами папки latest/* пустыми через .gitkeep
 !benchmarks/latest/
@@ -35,11 +37,3 @@ benchmarks/latest/results/*.csv
 !benchmarks/latest/plots/
 benchmarks/latest/results/.gitkeep
 benchmarks/latest/plots/.gitkeep
-
-# ---- Legacy/old layout (на случай остатков) --------------------------------
-02_*/
-03_compiler_go/
-04_benchmarks/
-05_vm_mini/
-06_aot_minic/
-tools/benchfast/
